# Charlie-detective-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  HANDOVER.md  PROJET second cerveau detective.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  _version.py  alerts.py  cerveau_client.py  cerveau_dossier.py  charlie.py  charlie_memory.py  config.py  healthcheck.py  logging_config.py  main.py  settings_store.py  telegram_bot.py
app/delivery/: imap_draft.py  resend_notifier.py  slack_bot.py  (+1 more)
db_import/: detectivebelgium.db
deploy/: detective-agent.service
docs/: CERVEAU2.md  CERVEAU2_API.md  CERVEAU2_EXTRACTION.md  CERVEAU2_INTEGRATION.md  CERVEAU2_RECHERCHE_FACTUELLE.md  CONTEXT.md  DEMO_CHECKLIST.md  HANDOVER.md  PATTERNS_FROM_CHARLIE_V1.21.3.md  ROADMAP.md  RUNBOOK.md  SPEC.md
scripts/: audit_nl_drafts_v3.py  backfill_dedup_apple.py  backfill_dedup_v1_29_0_6.py  backfill_historical_to_cerveau2.py  backfill_reclassify.py  backfill_threading.py  bootstrap_cerveau2.py  bootstrap_embeddings.py  build_bible_pdf.py  check_imap.py  cleanup_drafts_by_uid.py  cleanup_drafts_without_email_id.py  cleanup_old_drafts.py  debug_telegram.py  dedup_drafts_by_email_id.py  deliver_pending_drafts.py  deploy-to-vps.sh  detective-docker-clean.sh  detective-healthcheck.sh  evolve_soul.py  extract_personality.py  extract_soul.py  fix_charlie_memory.py  fix_prompts.py  ingest_sent_to_cerveau2.py  manual_draft_deposit.py  regenerate_and_deliver_drafts.py  reinsert_12097.py  review_missed_demande_client.py  run_telegram_bot.py  simulate_trial.py  smoke_test_llm.py  smoke_test_sqlite_vec.py  test_adf.py  test_adulte.py  test_draft_qualification.py  test_memory.py  test_namur.py  test_newsletter_digest.py  test_pipeline.py  (+1 more)
tests/: test_admin_draft_simulator.py  test_backfill_reclassify.py  test_case_classifier.py  test_case_classifier_dette.py  test_cerveau_client.py  test_cerveau_feed.py  test_charlie_vault.py  test_classifier_hardening.py  test_dedup.py  test_draft_renderer.py  test_generator_draft.py  test_hourly_draft_check.py  test_illegal_request.py  test_imap_draft.py  test_imap_poller_resilience.py  test_internal_sender_guard.py  test_mission_dated_draft.py  test_objective_check.py  test_prefilter_followup_bypass.py  test_prefilter_newsletter.py  test_prefilter_wp_forms.py  test_qualification_builder.py  test_qualification_builder_dette.py  test_qualification_builder_succession.py  test_reply_to_daniel_outlook.py  test_subject_fixer.py  test_suggested_subject_v1_25_28.py  test_threading.py  test_v1_25_22_fixes.py  test_web_draft_retry.py  test_web_fix_subject.py  test_web_followup_shortcut.py  test_web_inbox_render.py  test_web_inbox_suggested_subject.py
(+46 files in other folders)
