[project]
name = "detective-agent"
# ⚠️ SENTINELLE — NE PAS BUMPER.
# La version de l'application vit dans app/_version.py (source unique de vérité).
# Ce champ est figé en 1.9.5 volontairement. Voir CLAUDE.md §3 et HANDOVER.md §2.
version = "1.9.5"
description = "Agent IA email pour Detective.be — classification + brouillons de réponse style Daniel Hurchon"
requires-python = ">=3.11"
dependencies = [
    "aioimaplib>=2.0.1",
    "litellm>=1.50.0",
    "sqlite-vec>=0.1.6",
    "langdetect>=1.0.9",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=20.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1",
    "itsdangerous>=2.1.0",
    "email-validator>=2.0.0",
    "slack_bolt>=1.19.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
